# forensic-mh-trust

./: .gitignore  AIandDigitalForensic_project.docx  README.md  pyproject.toml
docs/: 01_proposal_review.md  02_literature_landscape.md  03_novelty_options.md  04_experiments_and_results.md  05_research_questions.md  06_failures_and_revisions.md  07_method_proposal.md  08_venue_strategy.md  README.md  proposal_extension_v1.md  proposal_extracted.md
scripts/: 01_download_1000g.sh  02_extract_eas_samples.sh  03_run_baseline.py  05_download_related_samples.sh  06_download_genome_wide.sh  10_conformal_curve.py  11_openset_ood.py  12_lopo_nearood.py  13_pca_ablation.py  16_plan2_rf.py  19_onehot_cv.py  21_model_zoo_onehot.py  26_l1_panel_cv.py  27_min_panel_strong.py  32_extract_all_1kg.py  33_extract_hgdp1kg.py  34_ssl_retrain.py  35_extended_zoo.py  38_tabpfn_panel.py  39_dl_resnet_cnn.py  40_ssl_ablation.py  README.md
scripts/baseline/: 04_wei2025_phasing.py
scripts/data/: 22_extract_hgdp.py
scripts/models/: 14_fm_vs_xgboost.py  15_model_zoo.py  30_model_zoo_dl.py  31_dl_architectures.py  36_native_cat_trees.py  37_sota_dl.py  43_linear_family.py  44_dietnet.py  45_random_effects.py  46_nt_transfer.py  50_smalln_robustness.py
scripts/panel/: 25_min_panel_logreg.py  28_min_panel_trust.py  29_min_panel_rfe.py
scripts/rq7/: 23_hgdp_transfer.py  42_rq7_incallset.py  52_cree_transfer.py
scripts/ssl/: 41_ssl_gnomad.py  48_ssl_randeff.py
scripts/trust/: 12_lopo_nearood.py  17_calibration_uq.py  18_ado_robustness.py  20_plan2_logreg.py  24_trust_rigor.py  47_embed_conformal.py  49_cree_variance.py  53_perpop_coverage.py  54_near_ood.py  55_cree_mechanism.py  56_near_ood_boost.py
tests/data/: test_encoding.py  test_vcf_io.py  (+1 more)
(+44 files in other folders)
