[project]
name = "forensic_mh"
version = "0.1.0"
description = "Trustworthy Forensic Microhaplotype Foundation Model"
authors = [{name = "조민한"}]
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "cyvcf2>=0.30",
    "pysam>=0.22",
    "microhapdb>=0.7",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "mapie>=0.9",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyterlab",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forensic_mh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
