[project]
name = "forensic_mh"
version = "0.1.0"
description = "Trustworthy Forensic Microhaplotype Foundation Model"
authors = [{name = "조민한"}]
requires-python = ">=3.11"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "torch>=2.2",
    "cyvcf2>=0.30",
    "pysam>=0.22",
    "microhapdb==0.12",  # 버전 고정(재현성): 0.4=290, 0.7=507, 0.9=2804, 0.10~0.12=3053 markers
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "mapie>=0.9",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyterlab",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forensic_mh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
